--- a/libft/Makefile
+++ b/libft/Makefile
@@ -9,8 +9,8 @@ SRCS = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c \
 			ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c
 
 BONUS = ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c \
-			ft_lstdelone.c ft_lstlast.c ft_lstnew.c \
-			ft_lstsize.c ft_lstsize.c ft_lstmap.c ft_lstiter.c
+			ft_lstdelone.c ft_lstiter.c ft_lstlast.c \
+			ft_lstmap.c ft_lstnew.c ft_lstsize.c \
 
 OBJS = $(SRCS:%.c=%.o)
 
