--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -4,12 +4,13 @@ SRCS = ft_printf.c ft_printnums.c ft_printwords.c
 
 OBJS = $(SRCS:%.c=%.o)
 
-CC = cc -Wall -Wextra -Werror
+CC = cc
+CFLAGS = -Wall -Wextra -Werror
 
 RM = rm -f
 
 %.o : %.c
-	$(CC) -c $< -o $@
+	$(CC) $(CGLAGS) -c $< -o $@
 
 $(NAME) : $(OBJS)
 	ar rc $(NAME) $(OBJS)
